--- a/OpenPLC/readme
+++ b/OpenPLC/readme
@@ -1,1 +1,1 @@
-The OpenPLC project with the PLCopen motion library will follow...
+the PLCopen motion library is included in the openPLC example project
